// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain/EntityEditorContainer Deleted Foo 1`] = `
<div
  className="dd flex-row g-2 overflow-hidden position-fixed inset-0"
>
  <div
    className="dd flex-grow flex-column g-2 overflow-y-scroll"
  >
    <div
      data-entityid="fb62be03-a0a9-4689-9987-bacee0e7692d"
    >
      <form
        className="dd flex-column p-3 is-rounded has-background has-shadow"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-_name"
          >
            Name
          </label>
          <div
            className="dd form-control"
          >
            <input
              className="dd text-body1 input"
              id="fb62be03-a0a9-4689-9987-bacee0e7692d-_name"
              onChange={[Function]}
              type="text"
              value="Foo deleted"
            />
          </div>
        </div>
        <hr
          className="dd divider"
        />
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-title"
          >
            title
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <input
                className="dd text-body1 input"
                id="fb62be03-a0a9-4689-9987-bacee0e7692d-title"
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-tags"
          >
            tags
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div>
                <input
                  className="dd text-body1 input"
                  id="fb62be03-a0a9-4689-9987-bacee0e7692d-tags"
                  onChange={[Function]}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-location"
          >
            location
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-row"
            >
              <button
                className="dd button has-background hoverable text-button is-rounded"
                id="fb62be03-a0a9-4689-9987-bacee0e7692d-location"
                onClick={[Function]}
                type="button"
              >
                Select location
              </button>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-locations"
          >
            locations
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fb62be03-a0a9-4689-9987-bacee0e7692d-locations"
                  onClick={[Function]}
                  type="button"
                >
                  Select location
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-bar"
          >
            bar
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-row"
            >
              <button
                className="dd button has-background hoverable text-button is-rounded"
                id="fb62be03-a0a9-4689-9987-bacee0e7692d-bar"
                onClick={[Function]}
                type="button"
              >
                Select entity
              </button>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-bars"
          >
            bars
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fb62be03-a0a9-4689-9987-bacee0e7692d-bars"
                  onClick={[Function]}
                  type="button"
                >
                  Select entity
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-body"
          >
            body
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <div
                className="dd flex-row"
              >
                <div
                  className="dd flex-grow"
                />
              </div>
              <div
                className="dd text-body1"
                data-editorinitialized="false"
                id="fb62be03-a0a9-4689-9987-bacee0e7692d-body"
              />
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-annotatedBar"
          >
            annotatedBar
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd segment has-shadow"
            >
              <div>
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fb62be03-a0a9-4689-9987-bacee0e7692d-annotatedBar"
                  onClick={[Function]}
                  type="button"
                >
                  Add value item
                   
                  <span
                    className="dd icon icon-chevron-down"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-annotatedBars"
          >
            annotatedBars
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd segment has-shadow"
              >
                <div>
                  <button
                    className="dd button has-background hoverable text-button is-rounded"
                    id="fb62be03-a0a9-4689-9987-bacee0e7692d-annotatedBars"
                    onClick={[Function]}
                    type="button"
                  >
                    Add value item
                     
                    <span
                      className="dd icon icon-chevron-down"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fb62be03-a0a9-4689-9987-bacee0e7692d-nested"
          >
            nested
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd segment has-shadow"
            >
              <div>
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fb62be03-a0a9-4689-9987-bacee0e7692d-nested"
                  onClick={[Function]}
                  type="button"
                >
                  Add value item
                   
                  <span
                    className="dd icon icon-chevron-down"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dd flex-row g-1"
        >
          <button
            className="dd button has-background hoverable text-button bg-primary is-rounded"
            disabled={false}
            type="submit"
          >
            Save
          </button>
          <button
            className="dd button has-background hoverable text-button is-rounded"
            disabled={false}
            type="reset"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
    <div>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        id="create-entity-picker"
        onClick={[Function]}
        type="button"
      >
        Create entity
         
        <span
          className="dd icon icon-chevron-down"
        />
      </button>
    </div>
  </div>
  <div>
    <div
      className="dd flex-column has-shadow has-background py-2 h-100 g-2"
    >
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Name
        </p>
        <p
          className="dd text-body1"
        >
          Foo deleted
        </p>
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Type
        </p>
        <p
          className="dd text-body1"
        >
          Foo
        </p>
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          ID
        </p>
        <p
          className="dd text-body1"
        >
          fb62be03-a0a9-4689-9987-bacee0e7692d
        </p>
      </div>
      <div
        className="dd flex-column dd flex-grow overflow-y-scroll"
      >
        <button
          className="dd button has-background hoverable text-button"
          onClick={[Function]}
          type="button"
        >
          <p
            className="dd text-subtitle2"
          >
            Version 
            0
          </p>
          <p
            className="dd text-body1"
          >
            3/10/2021, 7:19:39 PM
          </p>
          <p
            className="dd text-body1"
          >
            a10e49cd-2f4e-4249-b8ee-eaca8466939b
          </p>
        </button>
        <button
          className="dd button has-background hoverable text-button"
          onClick={[Function]}
          type="button"
        >
          <p
            className="dd text-subtitle2"
          >
            Version 
            1
            <span
              className="dd has-background text-caption p-1 is-rounded bg-danger"
            >
              Deleted
            </span>
            <span
              className="dd has-background text-caption p-1 is-rounded bg-primary"
            >
              Published
            </span>
          </p>
          <p
            className="dd text-body1"
          >
            3/11/2021, 9:19:39 PM
          </p>
          <p
            className="dd text-body1"
          >
            a10e49cd-2f4e-4249-b8ee-eaca8466939b
          </p>
        </button>
      </div>
      <button
        className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
        disabled={true}
        type="button"
      >
        Publish
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityEditorContainer Full Foo 1`] = `
<div
  className="dd flex-row g-2 overflow-hidden position-fixed inset-0"
>
  <div
    className="dd flex-grow flex-column g-2 overflow-y-scroll"
  >
    <div
      data-entityid="fc66b4d7-61ff-44d4-8f68-cb7f526df046"
    >
      <form
        className="dd flex-column p-3 is-rounded has-background has-shadow"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
          >
            Name
          </label>
          <div
            className="dd form-control"
          >
            <input
              className="dd text-body1 input"
              id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
              onChange={[Function]}
              type="text"
              value="Foo 1"
            />
          </div>
        </div>
        <hr
          className="dd divider"
        />
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
          >
            title
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <input
                className="dd text-body1 input"
                id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
                onChange={[Function]}
                type="text"
                value="Hello"
              />
              <button
                className="dd icon-button"
                onClick={[Function]}
                title="Clear"
                type="button"
              >
                <span
                  className="dd icon icon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags"
          >
            tags
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div>
                <input
                  className="dd text-body1 input"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags"
                  onChange={[Function]}
                  type="text"
                  value="one"
                />
                <button
                  className="dd icon-button"
                  onClick={[Function]}
                  title="Remove item"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div>
                <input
                  className="dd text-body1 input"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags-1"
                  onChange={[Function]}
                  type="text"
                  value="two"
                />
                <button
                  className="dd icon-button"
                  onClick={[Function]}
                  title="Remove item"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div>
                <input
                  className="dd text-body1 input"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags-2"
                  onChange={[Function]}
                  type="text"
                  value="three"
                />
                <button
                  className="dd icon-button"
                  onClick={[Function]}
                  title="Remove item"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div>
                <input
                  className="dd text-body1 input"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags-3"
                  onChange={[Function]}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-location"
          >
            location
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-row"
            >
              <button
                className="dd button has-background hoverable text-button is-rounded"
                id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-location"
                onClick={[Function]}
                type="button"
              >
                55.60498, 13.003822
              </button>
              <button
                className="dd icon-button"
                onClick={[Function]}
                title="Remove location"
                type="button"
              >
                <span
                  className="dd icon icon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-locations"
          >
            locations
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-locations"
                  onClick={[Function]}
                  type="button"
                >
                  55.60498, 13.003822
                </button>
                <button
                  className="dd icon-button"
                  onClick={[Function]}
                  title="Remove location"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-locations-1"
                  onClick={[Function]}
                  type="button"
                >
                  56.381561, 13.99286
                </button>
                <button
                  className="dd icon-button"
                  onClick={[Function]}
                  title="Remove location"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-locations-2"
                  onClick={[Function]}
                  type="button"
                >
                  Select location
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-bar"
          >
            bar
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-row"
            >
              <button
                className="dd button has-background hoverable text-button is-rounded"
                id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-bar"
                onClick={[Function]}
                type="button"
              >
                Bar 1
              </button>
              <button
                className="dd icon-button"
                onClick={[Function]}
                title="Remove entity"
                type="button"
              >
                <span
                  className="dd icon icon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars"
          >
            bars
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars"
                  onClick={[Function]}
                  type="button"
                >
                  Bar 1
                </button>
                <button
                  className="dd icon-button"
                  onClick={[Function]}
                  title="Remove entity"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars-1"
                  onClick={[Function]}
                  type="button"
                >
                  Bar 2
                </button>
                <button
                  className="dd icon-button"
                  onClick={[Function]}
                  title="Remove entity"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars-2"
                  onClick={[Function]}
                  type="button"
                >
                  Select entity
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-body"
          >
            body
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <div
                className="dd flex-row"
              >
                <div
                  className="dd flex-grow"
                />
                <button
                  className="dd icon-button a"
                  onClick={[Function]}
                  title="Clear"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div
                className="dd text-body1"
                data-editorinitialized="false"
                id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-body"
              />
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar"
          >
            annotatedBar
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd segment has-shadow"
            >
              <div
                className="dd flex-row g-2"
              >
                <div
                  className="dd flex-grow text-caption"
                >
                  AnnotatedBar
                </div>
                <button
                  className="dd icon-button dd"
                  data-testid="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar.remove"
                  onClick={[Function]}
                  title="Remove value item"
                  type="button"
                >
                  <span
                    className="dd icon icon-remove"
                  />
                </button>
              </div>
              <div>
                <label
                  className="dd text-subtitle1"
                  htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar-annotation"
                >
                  annotation
                </label>
                <div
                  className="dd form-control"
                >
                  <div>
                    <input
                      className="dd text-body1 input"
                      id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar-annotation"
                      onChange={[Function]}
                      type="text"
                      value="Annotation"
                    />
                    <button
                      className="dd icon-button"
                      onClick={[Function]}
                      title="Clear"
                      type="button"
                    >
                      <span
                        className="dd icon icon-remove"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div>
                <label
                  className="dd text-subtitle1"
                  htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar-bar"
                >
                  bar
                </label>
                <div
                  className="dd form-control"
                >
                  <div
                    className="dd flex-row"
                  >
                    <button
                      className="dd button has-background hoverable text-button is-rounded"
                      id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBar-bar"
                      onClick={[Function]}
                      type="button"
                    >
                      Bar 2
                    </button>
                    <button
                      className="dd icon-button"
                      onClick={[Function]}
                      title="Remove entity"
                      type="button"
                    >
                      <span
                        className="dd icon icon-remove"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars"
          >
            annotatedBars
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd segment has-shadow"
              >
                <div
                  className="dd flex-row g-2"
                >
                  <div
                    className="dd flex-grow text-caption"
                  >
                    AnnotatedBar
                  </div>
                  <button
                    className="dd icon-button dd"
                    data-testid="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars.remove"
                    onClick={[Function]}
                    title="Remove value item"
                    type="button"
                  >
                    <span
                      className="dd icon icon-remove"
                    />
                  </button>
                </div>
                <div>
                  <label
                    className="dd text-subtitle1"
                    htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-annotation"
                  >
                    annotation
                  </label>
                  <div
                    className="dd form-control"
                  >
                    <div>
                      <input
                        className="dd text-body1 input"
                        id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-annotation"
                        onChange={[Function]}
                        type="text"
                        value="First"
                      />
                      <button
                        className="dd icon-button"
                        onClick={[Function]}
                        title="Clear"
                        type="button"
                      >
                        <span
                          className="dd icon icon-remove"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div>
                  <label
                    className="dd text-subtitle1"
                    htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-bar"
                  >
                    bar
                  </label>
                  <div
                    className="dd form-control"
                  >
                    <div
                      className="dd flex-row"
                    >
                      <button
                        className="dd button has-background hoverable text-button is-rounded"
                        id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-bar"
                        onClick={[Function]}
                        type="button"
                      >
                        Bar 1
                      </button>
                      <button
                        className="dd icon-button"
                        onClick={[Function]}
                        title="Remove entity"
                        type="button"
                      >
                        <span
                          className="dd icon icon-remove"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="dd segment has-shadow"
              >
                <div
                  className="dd flex-row g-2"
                >
                  <div
                    className="dd flex-grow text-caption"
                  >
                    AnnotatedBar
                  </div>
                  <button
                    className="dd icon-button dd"
                    data-testid="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1.remove"
                    onClick={[Function]}
                    title="Remove value item"
                    type="button"
                  >
                    <span
                      className="dd icon icon-remove"
                    />
                  </button>
                </div>
                <div>
                  <label
                    className="dd text-subtitle1"
                    htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1-annotation"
                  >
                    annotation
                  </label>
                  <div
                    className="dd form-control"
                  >
                    <div>
                      <input
                        className="dd text-body1 input"
                        id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1-annotation"
                        onChange={[Function]}
                        type="text"
                        value="Second"
                      />
                      <button
                        className="dd icon-button"
                        onClick={[Function]}
                        title="Clear"
                        type="button"
                      >
                        <span
                          className="dd icon icon-remove"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div>
                  <label
                    className="dd text-subtitle1"
                    htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1-bar"
                  >
                    bar
                  </label>
                  <div
                    className="dd form-control"
                  >
                    <div
                      className="dd flex-row"
                    >
                      <button
                        className="dd button has-background hoverable text-button is-rounded"
                        id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-1-bar"
                        onClick={[Function]}
                        type="button"
                      >
                        Bar 2
                      </button>
                      <button
                        className="dd icon-button"
                        onClick={[Function]}
                        title="Remove entity"
                        type="button"
                      >
                        <span
                          className="dd icon icon-remove"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="dd segment has-shadow"
              >
                <div>
                  <button
                    className="dd button has-background hoverable text-button is-rounded"
                    id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-annotatedBars-2"
                    onClick={[Function]}
                    type="button"
                  >
                    Add value item
                     
                    <span
                      className="dd icon icon-chevron-down"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="fc66b4d7-61ff-44d4-8f68-cb7f526df046-nested"
          >
            nested
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd segment has-shadow"
            >
              <div>
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="fc66b4d7-61ff-44d4-8f68-cb7f526df046-nested"
                  onClick={[Function]}
                  type="button"
                >
                  Add value item
                   
                  <span
                    className="dd icon icon-chevron-down"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dd flex-row g-1"
        >
          <button
            className="dd button has-background hoverable text-button bg-primary is-rounded"
            disabled={false}
            type="submit"
          >
            Save
          </button>
          <button
            className="dd button has-background hoverable text-button is-rounded"
            disabled={false}
            type="reset"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
    <div>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        id="create-entity-picker"
        onClick={[Function]}
        type="button"
      >
        Create entity
         
        <span
          className="dd icon icon-chevron-down"
        />
      </button>
    </div>
  </div>
  <div>
    <div
      className="dd flex-column has-shadow has-background py-2 h-100 g-2"
    >
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Name
        </p>
        <p
          className="dd text-body1"
        >
          Foo 1
        </p>
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Type
        </p>
        <p
          className="dd text-body1"
        >
          Foo
        </p>
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          ID
        </p>
        <p
          className="dd text-body1"
        >
          fc66b4d7-61ff-44d4-8f68-cb7f526df046
        </p>
      </div>
      <div
        className="dd flex-column dd flex-grow overflow-y-scroll"
      >
        <button
          className="dd button has-background hoverable text-button"
          onClick={[Function]}
          type="button"
        >
          <p
            className="dd text-subtitle2"
          >
            Version 
            0
            <span
              className="dd has-background text-caption p-1 is-rounded bg-primary"
            >
              Published
            </span>
          </p>
          <p
            className="dd text-body1"
          >
            3/11/2021, 9:19:39 PM
          </p>
          <p
            className="dd text-body1"
          >
            a10e49cd-2f4e-4249-b8ee-eaca8466939b
          </p>
        </button>
      </div>
      <button
        className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
        disabled={true}
        type="button"
      >
        Publish
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityEditorContainer Invalid Type New Entity 1`] = `
<div
  className="dd flex-row g-2 overflow-hidden position-fixed inset-0"
>
  <div
    className="dd flex-grow flex-column g-2 overflow-y-scroll"
  >
    <div
      className="dd message has-background has-shadow bg-danger"
    >
      <div
        className="dd stack"
      >
        <p
          className="dd text-body1"
        >
          Can't create entity with unsupported type: InvalidType
        </p>
      </div>
    </div>
    <div>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        id="create-entity-picker"
        onClick={[Function]}
        type="button"
      >
        Create entity
         
        <span
          className="dd icon icon-chevron-down"
        />
      </button>
    </div>
  </div>
  <div>
    <div
      className="dd flex-column has-shadow has-background py-2 h-100 g-2"
    >
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Name
        </p>
        <p
          className="dd text-body1"
        />
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Type
        </p>
        <p
          className="dd text-body1"
        />
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          ID
        </p>
        <p
          className="dd text-body1"
        >
          da4a48d6-341e-4515-941f-b83578191b51
        </p>
      </div>
      <div
        className="dd flex-column dd flex-grow overflow-y-scroll"
      />
      <button
        className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
        disabled={true}
        type="button"
      >
        Publish
      </button>
      <div
        className="dd message has-background has-shadow bg-danger"
      >
        <div
          className="dd stack"
        >
          <p
            className="dd text-body1"
          >
            NotFound: No such entity
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityEditorContainer New Foo 1`] = `
<div
  className="dd flex-row g-2 overflow-hidden position-fixed inset-0"
>
  <div
    className="dd flex-grow flex-column g-2 overflow-y-scroll"
  >
    <div
      data-entityid="82ded109-44f2-48b9-a676-43162fda3d7d"
    >
      <form
        className="dd flex-column p-3 is-rounded has-background has-shadow"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-_name"
          >
            Name
          </label>
          <div
            className="dd form-control"
          >
            <input
              className="dd text-body1 input"
              id="82ded109-44f2-48b9-a676-43162fda3d7d-_name"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <hr
          className="dd divider"
        />
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-title"
          >
            title
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <input
                className="dd text-body1 input"
                id="82ded109-44f2-48b9-a676-43162fda3d7d-title"
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-tags"
          >
            tags
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div>
                <input
                  className="dd text-body1 input"
                  id="82ded109-44f2-48b9-a676-43162fda3d7d-tags"
                  onChange={[Function]}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-location"
          >
            location
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-row"
            >
              <button
                className="dd button has-background hoverable text-button is-rounded"
                id="82ded109-44f2-48b9-a676-43162fda3d7d-location"
                onClick={[Function]}
                type="button"
              >
                Select location
              </button>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-locations"
          >
            locations
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="82ded109-44f2-48b9-a676-43162fda3d7d-locations"
                  onClick={[Function]}
                  type="button"
                >
                  Select location
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-bar"
          >
            bar
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-row"
            >
              <button
                className="dd button has-background hoverable text-button is-rounded"
                id="82ded109-44f2-48b9-a676-43162fda3d7d-bar"
                onClick={[Function]}
                type="button"
              >
                Select entity
              </button>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-bars"
          >
            bars
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd flex-row"
              >
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="82ded109-44f2-48b9-a676-43162fda3d7d-bars"
                  onClick={[Function]}
                  type="button"
                >
                  Select entity
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-body"
          >
            body
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <div
                className="dd flex-row"
              >
                <div
                  className="dd flex-grow"
                />
              </div>
              <div
                className="dd text-body1"
                data-editorinitialized="false"
                id="82ded109-44f2-48b9-a676-43162fda3d7d-body"
              />
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-annotatedBar"
          >
            annotatedBar
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd segment has-shadow"
            >
              <div>
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="82ded109-44f2-48b9-a676-43162fda3d7d-annotatedBar"
                  onClick={[Function]}
                  type="button"
                >
                  Add value item
                   
                  <span
                    className="dd icon icon-chevron-down"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-annotatedBars"
          >
            annotatedBars
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd flex-column g-1"
            >
              <div
                className="dd segment has-shadow"
              >
                <div>
                  <button
                    className="dd button has-background hoverable text-button is-rounded"
                    id="82ded109-44f2-48b9-a676-43162fda3d7d-annotatedBars"
                    onClick={[Function]}
                    type="button"
                  >
                    Add value item
                     
                    <span
                      className="dd icon icon-chevron-down"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="82ded109-44f2-48b9-a676-43162fda3d7d-nested"
          >
            nested
          </label>
          <div
            className="dd form-control"
          >
            <div
              className="dd segment has-shadow"
            >
              <div>
                <button
                  className="dd button has-background hoverable text-button is-rounded"
                  id="82ded109-44f2-48b9-a676-43162fda3d7d-nested"
                  onClick={[Function]}
                  type="button"
                >
                  Add value item
                   
                  <span
                    className="dd icon icon-chevron-down"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="dd flex-row g-1"
        >
          <button
            className="dd button has-background hoverable text-button bg-primary is-rounded"
            disabled={true}
            type="submit"
          >
            Save
          </button>
          <button
            className="dd button has-background hoverable text-button is-rounded"
            disabled={false}
            type="reset"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
    <div>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        id="create-entity-picker"
        onClick={[Function]}
        type="button"
      >
        Create entity
         
        <span
          className="dd icon icon-chevron-down"
        />
      </button>
    </div>
  </div>
  <div>
    <div
      className="dd flex-column has-shadow has-background py-2 h-100 g-2"
    >
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Name
        </p>
        <p
          className="dd text-body1"
        >
          
        </p>
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Type
        </p>
        <p
          className="dd text-body1"
        >
          Foo
        </p>
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          ID
        </p>
        <p
          className="dd text-body1"
        >
          82ded109-44f2-48b9-a676-43162fda3d7d
        </p>
      </div>
      <div
        className="dd flex-column dd flex-grow overflow-y-scroll"
      />
      <button
        className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
        disabled={true}
        type="button"
      >
        Publish
      </button>
      <div
        className="dd message has-background has-shadow bg-danger"
      >
        <div
          className="dd stack"
        >
          <p
            className="dd text-body1"
          >
            NotFound: No such entity
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityEditorContainer Not Found 1`] = `
<div
  className="dd flex-row g-2 overflow-hidden position-fixed inset-0"
>
  <div
    className="dd flex-grow flex-column g-2 overflow-y-scroll"
  >
    <div
      className="dd message has-background has-shadow bg-danger"
    >
      <div
        className="dd stack"
      >
        <p
          className="dd text-headline5"
        >
          Failed loading entity
        </p>
        <p
          className="dd text-body1"
        >
          NotFound: No such entity or version
        </p>
      </div>
    </div>
    <div>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        id="create-entity-picker"
        onClick={[Function]}
        type="button"
      >
        Create entity
         
        <span
          className="dd icon icon-chevron-down"
        />
      </button>
    </div>
  </div>
  <div>
    <div
      className="dd flex-column has-shadow has-background py-2 h-100 g-2"
    >
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Name
        </p>
        <p
          className="dd text-body1"
        />
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Type
        </p>
        <p
          className="dd text-body1"
        />
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          ID
        </p>
        <p
          className="dd text-body1"
        >
          c6f97fae-1213-4be0-996f-4f20c7da7e65
        </p>
      </div>
      <div
        className="dd flex-column dd flex-grow overflow-y-scroll"
      />
      <button
        className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
        disabled={true}
        type="button"
      >
        Publish
      </button>
      <div
        className="dd message has-background has-shadow bg-danger"
      >
        <div
          className="dd stack"
        >
          <p
            className="dd text-body1"
          >
            NotFound: No such entity
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityEditorContainer Slow Full Foo 1`] = `
<div
  className="dd flex-row g-2 overflow-hidden position-fixed inset-0"
>
  <div
    className="dd flex-grow flex-column g-2 overflow-y-scroll"
  >
    <div
      className="dd loader"
    />
    <div>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        id="create-entity-picker"
        onClick={[Function]}
        type="button"
      >
        Create entity
         
        <span
          className="dd icon icon-chevron-down"
        />
      </button>
    </div>
  </div>
  <div>
    <div
      className="dd flex-column has-shadow has-background py-2 h-100 g-2"
    >
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Name
        </p>
        <p
          className="dd text-body1"
        />
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Type
        </p>
        <p
          className="dd text-body1"
        />
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          ID
        </p>
        <p
          className="dd text-body1"
        >
          fc66b4d7-61ff-44d4-8f68-cb7f526df046
        </p>
      </div>
      <div
        className="dd flex-column dd flex-grow overflow-y-scroll"
      >
        <div
          className="dd loader"
        />
      </div>
      <button
        className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
        disabled={true}
        type="button"
      >
        Publish
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityEditorContainer Two Entities 1`] = `
<div
  className="dd flex-row g-2 overflow-hidden position-fixed inset-0"
>
  <div
    className="dd flex-grow flex-column g-2 overflow-y-scroll"
  >
    <div
      data-entityid="cb228716-d3dd-444f-9a77-80443d436339"
    >
      <form
        className="dd flex-column p-3 is-rounded has-background has-shadow"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="cb228716-d3dd-444f-9a77-80443d436339-_name"
          >
            Name
          </label>
          <div
            className="dd form-control"
          >
            <input
              className="dd text-body1 input"
              id="cb228716-d3dd-444f-9a77-80443d436339-_name"
              onChange={[Function]}
              type="text"
              value="Bar 1"
            />
          </div>
        </div>
        <hr
          className="dd divider"
        />
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="cb228716-d3dd-444f-9a77-80443d436339-title"
          >
            title
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <input
                className="dd text-body1 input"
                id="cb228716-d3dd-444f-9a77-80443d436339-title"
                onChange={[Function]}
                type="text"
                value="Bar 1"
              />
              <button
                className="dd icon-button"
                onClick={[Function]}
                title="Clear"
                type="button"
              >
                <span
                  className="dd icon icon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          className="dd flex-row g-1"
        >
          <button
            className="dd button has-background hoverable text-button bg-primary is-rounded"
            disabled={false}
            type="submit"
          >
            Save
          </button>
          <button
            className="dd button has-background hoverable text-button is-rounded"
            disabled={false}
            type="reset"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
    <div
      data-entityid="eb5732e2-b931-492b-82f1-f8fdd464f0d2"
    >
      <form
        className="dd flex-column p-3 is-rounded has-background has-shadow"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="eb5732e2-b931-492b-82f1-f8fdd464f0d2-_name"
          >
            Name
          </label>
          <div
            className="dd form-control"
          >
            <input
              className="dd text-body1 input"
              id="eb5732e2-b931-492b-82f1-f8fdd464f0d2-_name"
              onChange={[Function]}
              type="text"
              value="Bar 2"
            />
          </div>
        </div>
        <hr
          className="dd divider"
        />
        <div>
          <label
            className="dd text-subtitle1"
            htmlFor="eb5732e2-b931-492b-82f1-f8fdd464f0d2-title"
          >
            title
          </label>
          <div
            className="dd form-control"
          >
            <div>
              <input
                className="dd text-body1 input"
                id="eb5732e2-b931-492b-82f1-f8fdd464f0d2-title"
                onChange={[Function]}
                type="text"
                value="Bar 2"
              />
              <button
                className="dd icon-button"
                onClick={[Function]}
                title="Clear"
                type="button"
              >
                <span
                  className="dd icon icon-remove"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          className="dd flex-row g-1"
        >
          <button
            className="dd button has-background hoverable text-button bg-primary is-rounded"
            disabled={false}
            type="submit"
          >
            Save
          </button>
          <button
            className="dd button has-background hoverable text-button is-rounded"
            disabled={false}
            type="reset"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
    <div>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        id="create-entity-picker"
        onClick={[Function]}
        type="button"
      >
        Create entity
         
        <span
          className="dd icon icon-chevron-down"
        />
      </button>
    </div>
  </div>
  <div>
    <div
      className="dd flex-column has-shadow has-background py-2 h-100 g-2"
    >
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Name
        </p>
        <p
          className="dd text-body1"
        >
          Bar 1
        </p>
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          Type
        </p>
        <p
          className="dd text-body1"
        >
          Bar
        </p>
      </div>
      <div
        className="dd mx-2"
      >
        <p
          className="dd text-subtitle2"
        >
          ID
        </p>
        <p
          className="dd text-body1"
        >
          cb228716-d3dd-444f-9a77-80443d436339
        </p>
      </div>
      <div
        className="dd flex-column dd flex-grow overflow-y-scroll"
      >
        <button
          className="dd button has-background hoverable text-button"
          onClick={[Function]}
          type="button"
        >
          <p
            className="dd text-subtitle2"
          >
            Version 
            0
          </p>
          <p
            className="dd text-body1"
          >
            3/11/2021, 9:19:39 PM
          </p>
          <p
            className="dd text-body1"
          >
            a10e49cd-2f4e-4249-b8ee-eaca8466939b
          </p>
        </button>
      </div>
      <button
        className="dd button has-background hoverable text-button mx-2 bg-primary is-rounded"
        disabled={true}
        type="button"
      >
        Publish
      </button>
    </div>
  </div>
</div>
`;
